--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ after_success:
 - docker build -t burakunuvar/tieredapp/nginx-prod ./nginx
 - docker build -t burakunuvar/tieredapp/server-prod ./server
 - docker build -t burakunuvar/tieredapp/worker-prod ./worker
-- echo "$docker-password" | docker login -u "$docker-username" --password-stdin
+- echo "$docker_password" | docker login -u "$docker_username" --password-stdin
 - docker push burakunuvar/tieredapp/client-prod ./client
 - docker push burakunuvar/tieredapp/nginx-prod ./nginx
 - docker push burakunuvar/tieredapp/server-prod ./server
