--- a/.travis.yml
+++ b/.travis.yml
@@ -4,32 +4,18 @@ services:
   - docker
 
 before_install:
-  - docker build -t burakunuvar/tieredapp/client-test -f ./client/Dockerfile.dev .
+  - docker build -t burakunuvar/client-test -f ./client/Dockerfile.dev .
 
 script:
-- docker run -e CI=true burakunuvar/tieredapp/client-test npm run test
+- docker run -e CI=true burakunuvar/client-test npm run test
 
 after_success:
-- docker build -t burakunuvar/tieredapp/client-prod ./client
-- docker build -t burakunuvar/tieredapp/nginx-prod ./nginx
-- docker build -t burakunuvar/tieredapp/server-prod ./server
-- docker build -t burakunuvar/tieredapp/worker-prod ./worker
+- docker build -t burakunuvar/client-prod ./client
+- docker build -t burakunuvar/nginx-prod ./nginx
+- docker build -t burakunuvar/server-prod ./server
+- docker build -t burakunuvar/worker-prod ./worker
 - echo "$docker_password" | docker login -u "$docker_username" --password-stdin
-- docker push burakunuvar/tieredapp/client-prod ./client
-- docker push burakunuvar/tieredapp/nginx-prod ./nginx
-- docker push burakunuvar/tieredapp/server-prod ./server
-- docker push burakunuvar/tieredapp/worker-prod ./worker
-
-
-deploy:
-  edge: true
-  provider: elasticbeanstalk
-  region: "eu-west-1"
-  app: "docker-react"
-  env: "DockerReact-env"
-  bucket_name: "elasticbeanstalk-eu-west-1-158927923071"
-  bucket_path: "docker-react"
-  on:
-    branch: master
-  access_key_id: $access_key_id
-  secret_access_key: $secret_access_key
+- docker push burakunuvar/client-prod ./client
+- docker push burakunuvar/nginx-prod ./nginx
+- docker push burakunuvar/server-prod ./server
+- docker push burakunuvar/worker-prod ./worker
