--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - docker build -t burakunuvar/client-test -f ./client/Dockerfile.dev .
 
 script:
-- docker run -e CI=true burakunuvar/client-test npm run test
+- docker run -e CI=true burakunuvar/client-test npm test
 
 after_success:
 - docker build -t burakunuvar/client-prod ./client
