--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t burakunuvar/frontend-test -f ./client/Dockerfile.dev ./client
+  - docker build -t burakunuvar/client-test -f ./client/Dockerfile.dev ./client
 
 script:
   - docker run -e CI=true burakunuvar/client-test npm test
