--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,16 @@ after_success:
   - docker push burakunuvar/multi-nginx
   - docker push burakunuvar/multi-api
   - docker push burakunuvar/multi-worker
+
+deploy:
+  edge: true
+  provider: elasticbeanstalk
+  region: "eu-west-1"
+  app: "docker-multiapps"
+  env: "DockerMultiapps-env"
+  bucket_name: "elasticbeanstalk-eu-west-1-158927923071"
+  bucket_path: "docker-multiapps"
+  on:
+    branch: master
+  access_key_id: $access_key_id
+  secret_access_key: $secret_access_key
