--- a/.travis.yml
+++ b/.travis.yml
@@ -25,11 +25,11 @@ deploy:
   edge: true
   provider: elasticbeanstalk
   region: "eu-west-1"
-  app: "docker-multiapps"
-  env: "DockerMultiapps-env"
+  app: "multi-docker"
+  env: "MultiDocker-env"
   bucket_name: "elasticbeanstalk-eu-west-1-158927923071"
-  bucket_path: "docker-multiapps"
+  bucket_path: "docker-multi"
   on:
     branch: master
-  access_key_id: $access_key_id
-  secret_access_key: $secret_access_key
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
